Bug 48376 - mismatch in dbus org.PulseAudio.Core1.Stream.Move() argument
Summary: mismatch in dbus org.PulseAudio.Core1.Stream.Move() argument
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-06 02:05 UTC by Peter Meerwald
Modified: 2012-04-21 01:04 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Meerwald 2012-04-06 02:05:27 UTC
interface description says
Move(in device : ObjectPath) 

but code dbus/iface-stream.c handle_move() expects a string
pa_assert_se(dbus_message_get_args(msg, NULL, DBUS_TYPE_STRING, &device, DBUS_TYPE_INVALID));

resulting in 
E: [lt-pulseaudio] iface-stream.c: Assertion 'dbus_message_get_args(msg, NULL, DBUS_TYPE_STRING, &device, DBUS_TYPE_INVALID)' failed at modules/dbus/iface-stream.c:614, function handle_move(). Aborting.
Comment 1 Peter Meerwald 2012-04-06 02:50:17 UTC
patch submitted

From: Peter Meerwald <p.meerwald@bct-electronic.com>
Date: Fri, 6 Apr 2012 11:40:32 +0200
Subject: [PATCH] dbus: fix dbus argument type in iface-stream.c handle_move()

BugLink: https://bugs.freedesktop.org/show_bug.cgi?id=48376
Signed-off-by: Peter Meerwald <p.meerwald@bct-electronic.com>
---
 src/modules/dbus/iface-stream.c |    2 +-
 1 files changed, 1 insertions(+), 1 deletions(-)

diff --git a/src/modules/dbus/iface-stream.c b/src/modules/dbus/iface-stream.c
index ecd0ff3..c6dc1c9 100644
--- a/src/modules/dbus/iface-stream.c
+++ b/src/modules/dbus/iface-stream.c
@@ -611,7 +611,7 @@ static void handle_move(DBusConnection *conn, DBusMessage *msg, void *userdata)
     pa_assert(msg);
     pa_assert(s);
 
-    pa_assert_se(dbus_message_get_args(msg, NULL, DBUS_TYPE_STRING, &device, DBUS_TYPE_INVALID));
+    pa_assert_se(dbus_message_get_args(msg, NULL, DBUS_TYPE_OBJECT_PATH, &device, DBUS_TYPE_INVALID));
 
     if (s->type == STREAM_TYPE_PLAYBACK) {
         pa_sink *sink = pa_dbusiface_core_get_sink(s->core, device);
-- 
1.7.4.1


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.